<resources>
    <string name="app_name">Kabodapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_signup">No account? Sign up here.</string>
    <!--    <string name="action_logout">Logout</string>-->
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="button_signup">Signup</string>
    <string name="text_login">Already have an account? Login here</string>
    <string name="action_profile">Profile</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete Account</string>
    <string name="status">Status</string>
    <string name="chats">Chats</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Create Account</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kabod">KABOD</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account_login_text">Have an account? Login here</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up_here">No account? Sign up here</string>
    <string name="action_logout">Logout</string>
    <string name="hint_message">Type message</string>
    <string name="chat_test_message">Hi there. How are you today?</string>
    <string name="update_status">Update Status</string>
    <string name="status_message">Status message</string>

    <string name="user_profile_image">user profile image</string>
    <string name="status_image">status image</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sign_in_with_phone_number">Sign in with Phone Number</string>
    <string name="next_text">Next</string>
    <string name="continue_text">Continue</string>
    <string name="enter_otp_code">Enter the OTP code sent to your mobile</string>
    <string name="occupation">Occupation</string>
    <string name="city_state">City/State</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="smiley">smiley</string>
    <string name="send_chat">send chat</string>
    <string name="attach_file">attach file</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_account">Delete Account</string>
    <string name="update">Update</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_update_status">Update Status</string>
    <string name="menu_view_status">View Status</string>
    <string name="menu_profile">Profile</string>

    <string name="action_about">About</string>

    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="document">Document</string>
    <string name="gallery">Gallery</string>
    <string name="welcome_note">Welcome to kabod App. Click button below to begin.</string>
    <string name="signin_create_account">Signin/Create Account</string>
    <string name="about">About</string>
    <string name="about_info">This is the official app of Charles Adebola Ministries.</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_phone">Phone: +234 905 927 0030, +234 806 331 9364</string>
    <string name="contact_email">Email: revadebola@gmail.com</string>
    <string name="web_blog">Web/Blog: blog.charlesadebolaministries.org</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="click_to_resend_otp">Didn\'t get OTP? Click here to resend.</string>
</resources>
