<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/conversationView"
    tools:context=".conversation.ConversationActivity">

    <LinearLayout
        android:id="@+id/navigationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_shadow"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCV"
            android:layout_width="@dimen/standard_height"
            android:layout_height="@dimen/standard_height"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:layout_margin="@dimen/grid_2">

            <ImageView
                android:id="@+id/topPhotoIV"
                android:layout_width="@dimen/standard_height"
                android:layout_height="@dimen/standard_height"
                android:layout_marginEnd="@dimen/grid_1"
                android:contentDescription="@string/user_profile_image"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/topNameTV"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/grid_1"
            android:paddingRight="@dimen/grid_1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <!--    <Button-->
    <!--        android:id="@+id/sendButton"-->
    <!--        style="@style/SendButton"-->
    <!--        android:layout_width="@dimen/send_width"-->
    <!--        android:layout_height="@dimen/send_height"-->
    <!--        android:layout_margin="@dimen/grid_1"-->
    <!--        android:fontFamily="@font/poppins_light"-->
    <!--        android:onClick="onSend"-->
    <!--        android:text="@string/send_button_text"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/grid_2"
        android:layout_marginBottom="@dimen/grid_2"
        app:layout_constraintBottom_toTopOf="@+id/messageET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/sendButton"
        style="@style/SendButton"
        android:layout_width="@dimen/send_width"
        android:layout_height="@dimen/send_height"
        android:layout_margin="@dimen/grid_1"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/send_chat"
        android:onClick="onSend"
        android:src="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messagesRV" />

    <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
        android:id="@+id/messageET"
        emojiconSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_1"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_vertical"
        android:hint="@string/hint_message"
        android:maxHeight="@dimen/send_max_height"
        android:minHeight="@dimen/send_min_height"
        android:padding="@dimen/grid_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintStart_toEndOf="@+id/smiley" />

    <ImageView
        android:id="@+id/smiley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/smiley"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messagesRV"
        app:srcCompat="@drawable/smiley" />

</androidx.constraintlayout.widget.ConstraintLayout>